# Digikul.V0

./: .dockerignore  .gitignore  Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml
server/: Dockerfile  app.py  digikul_environment.py  requirements.txt
tests/: test_digikul.py
